convert/objects/sf_devops__Work_Item_State_Change__e.object
<CustomObject>
    <description>Platform Event for a state change of a Work Item</description>
    <label>Work Item State Change</label>
    <pluralLabel>Work Item State Changes</pluralLabel>
    <fields>
        <fullName>sf_devops__New_State__c</fullName>
        <description>The new state of a Work Item</description>
        <label>New State</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Previous_State__c</fullName>
        <description>The previous state of a Work Item</description>
        <label>Previous State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Work_Item_Id__c</fullName>
        <description>The Work Item that changed its state</description>
        <label>Work Item Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>